--- a/asp.net-hello-world/asp.net-hello-world.csproj
+++ b/asp.net-hello-world/asp.net-hello-world.csproj
@@ -7,4 +7,10 @@
     <RootNamespace>asp.net_hello_world</RootNamespace>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Content Update="Views\Home\Index.cshtml">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+
 </Project>
